--- a/reonnet/css/style.css
+++ b/reonnet/css/style.css
@@ -323,6 +323,10 @@ nav .bottom img {
 	.sample-header-section h1 {
 		font-size: 35px;
 	}
+
+	.sample-header-section #call-to-action {
+		bottom: 80px;
+	}
 }
 
 /* Hover Link CSS */
